--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,4 +12,6 @@ services:
       # - PROXY_PASS=password # Optional, need when your proxy need authentication.
       # - MP_GROUP_ID=-65536 # Optional, forward every public account message to specific group.
     volumes:
-      - $(pwd)/efb-wechat-data:/home/efb/efb_config/profiles/default
+      - efb-wechat-data:/home/efb/efb_config/profiles/default
+volumes:
+  efb-wechat-data:
